--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta
+      name="description"
+      content="My personal website - a portfolio of my projects as a web developer."
+    />
+    <meta
+      name="keywords"
+      content="web developer, portfolio, html, css, javascript, Tony"
+    />
+    <meta name="author" content="Tony" />
     <title>My website</title>
     
     
