--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       content="web developer, portfolio, html, css, javascript, Tony"
     />
     <meta name="author" content="Tony" />
+        <meta name="google-site-verification" content="google9c182013eb4c1264.html" />
+
     <title>My website</title>
     
     
