Update meta tags, description, and title for SEO

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       content="web developer, portfolio, html, css, javascript, Tony"
     />
     <meta name="author" content="Tony" />
-    <meta name="google-site-verification" content="google9c182013eb4c1264.html" />
-
-    <title>My website</title>
+    <meta
+      name="google-site-verification"
+      content="google9c182013eb4c1264.html"
+    />
+    <link rel="sitemap" type="application/xml" href="sitemap.xml" />
+    <title>My Portfolio - Tony</title>
 
     <link
       rel="stylesheet"
